--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -20,7 +20,15 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <ViewSwitcher
+        android:layout_width="match_parent"
+        android:layout_height="569dp">
+
+        <include
+            android:id="@+id/statusView"
+            layout="@layout/content_main"
+            android:layout_height="wrap_content" />
+    </ViewSwitcher>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
