--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,13 +13,13 @@
             android:icon="@drawable/ic_menu_gallery"
             android:title="View Balance" />
         <item
+            android:id="@+id/nav_history"
+            android:icon="@drawable/ic_menu_manage"
+            android:title="View History" />
+        <item
             android:id="@+id/nav_budgets"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="View/Edit Budgets" />
-        <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
     </group>
 
 </menu>
