--- a/app/src/main/res/layout/activity_view_transaction_history.xml
+++ b/app/src/main/res/layout/activity_view_transaction_history.xml
@@ -6,4 +6,8 @@
     android:layout_height="match_parent"
     tools:context="com.grailwar.costtracker.ViewTransactionHistoryActivity">
 
+    <ListView
+        android:id="@+id/transaction_history_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </android.support.constraint.ConstraintLayout>
