--- a/app/src/main/res/layout/content_balance.xml
+++ b/app/src/main/res/layout/content_balance.xml
@@ -8,22 +8,8 @@
     tools:context="com.grailwar.costtracker.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-    <ListView
-        android:id="@+id/budgetsListView"
-        android:layout_width="368dp"
-        android:layout_height="428dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="12dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/budgetView">
-
-    </ListView>
-
     <TextView
-        android:id="@+id/budgetView"
+        android:id="@+id/balance_text_view"
         android:layout_width="315dp"
         android:layout_height="55dp"
         android:layout_marginEnd="8dp"
@@ -35,5 +21,19 @@
         app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ListView
+        android:id="@+id/budgetsListView"
+        android:layout_width="368dp"
+        android:layout_height="428dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/balance_text_view">
+
+    </ListView>
 
 </android.support.constraint.ConstraintLayout>
